--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,8 @@ jobs:
           registry-url: "https://registry.npmjs.org"
 
       - name: Test Node.js
-        run: make test:node
+        run: |
+          make test:node
 
   test_python:
     name: Test for Python
