Switch to use Rust captcha.

--- a/.github/workflows/release-crate.yml
+++ b/.github/workflows/release-crate.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: publish
-          args: --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+          args: --manifest-path autocorrect/Cargo.toml --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
