--- a/.github/workflows/release-rb.yml
+++ b/.github/workflows/release-rb.yml
@@ -36,6 +36,8 @@ jobs:
           platform: ${{ matrix.ruby-platform }}
           directory: ./
           setup: cd autocorrect-rb/ && bundle install || gem install rb_sys
+          env: |
+            RUBY_CC_VERSION=3.1.0:3.0.0:2.7.0
 
   publish:
     name: Publish
