Implement lintFor result

--- a/autocorrect-java/Makefile
+++ b/autocorrect-java/Makefile
@@ -1,7 +1,8 @@
 .PHONY: lib test
 
 run: lib
-	javac javasrc/src/main/java/org/huacnlee/AutoCorrect.java && java -classpath javasrc/src/main/java/org/huacnlee/ -Djava.library.path=../target/debug/ AutoCorrect
+	javac javasrc/src/main/java/org/huacnlee/*.java -d javasrc/target/classes 
+	java -classpath javasrc/target/classes -Djava.library.path=../target/debug/ org/huacnlee/AutoCorrect
 
 javah:
 	javac -h . -sourcepath javasrc/src/main/java -d classes javasrc/src/main/java/org/huacnlee/AutoCorrect.java
