--- a/autocorrect-java/javasrc/pom.xml
+++ b/autocorrect-java/javasrc/pom.xml
@@ -6,11 +6,26 @@
 
     <groupId>org.huacnlee</groupId>
     <artifactId>autocorrect-java</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
+    <version>2.1.1</version>
     <name>autocorrect-java</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+    <description>A linter and formatter to help you to improve copywriting, correct spaces, words, punctuations between CJK (Chinese, Japanese, Korean).</description>
+    <url>https://github.com/huacnlee/autocorrect</url>
+
+    <developers>
+        <developer>
+            <name>Jason Lee</name>
+            <email>huacnlee@gmail.com</email>
+            <organization>https://github.com/huacnlee</organization>
+            <timezone>+8</timezone>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:huacnlee/autocorrect.git</connection>
+        <developerConnection>scm:git:git@github.com:huacnlee/autocorrect.git</developerConnection>
+        <url>https://github.com/huacnlee/autocorrect</url>
+    </scm>
+
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
