--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,21 @@ jobs:
       - name: Test Ruby
         run: make test:ruby
 
+  test_java:
+    name: Test for Java
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: "11"
+          distribution: "temurin"
+
+      - name: Test Java
+        run: make test:java
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
