--- a/autocorrect-java/javasrc/pom.xml
+++ b/autocorrect-java/javasrc/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>github.huacnlee</groupId>
+    <groupId>io.github.huacnlee</groupId>
     <artifactId>autocorrect-java</artifactId>
     <version>2.1.1</version>
     <name>autocorrect-java</name>
