--- a/autocorrect-java/Cargo.toml
+++ b/autocorrect-java/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "autocorrect-java"
-version = "2.3.2-beta"
+version = "2.3.2"
 
 [dependencies]
 autocorrect = {path = "../autocorrect"}
