--- a/.github/workflows/release-node.yml
+++ b/.github/workflows/release-node.yml
@@ -7,6 +7,8 @@ on:
   push:
     tags:
       - "v*"
+    branches:
+      - "release-node"
 defaults:
   run:
     working-directory: autocorrect-node
