--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/
 node_modules/
 pkg/
 node-pkg/
+.idea/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
