--- a/autocorrect-java/Makefile
+++ b/autocorrect-java/Makefile
@@ -1,8 +1,7 @@
 .PHONY: lib test
 
 run: lib
-	javac javasrc/src/main/java/io/github/huacnlee/*.java -d javasrc/target/classes 
-	java -classpath javasrc/target/classes -Djava.library.path=../target/debug/ io/github/huacnlee/AutoCorrect
+	cd javasrc; mvn --activate-profiles debug compile exec:java  --activate-profiles debug -Dexec.mainClass="io.github.huacnlee.AutoCorrect"
 
 javah:
 	javac -h . -sourcepath javasrc/src/main/java -d classes javasrc/src/main/java/io/github/huacnlee/AutoCorrect.java
