--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -19,9 +19,10 @@ clap = {version = "3", features = ['derive']}
 colored = "2"
 ignore = "0.4"
 lazy_static = "1.4.0"
-log = "0.4"
 num_cpus = "1.13.0"
 threadpool = "1.8.1"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
 walkdir = "2.3.2"
 
 # Config template from remote
