--- a/.autocorrectrc.template
+++ b/.autocorrectrc.template
@@ -5,6 +5,12 @@ textRules:
   # For example, if we wants to let "Hello你好" just warning, and "Hi你好" to ignore
   # "Hello你好": 2
   # "Hi你好": 0
+fileTypes:
+  # Config the files associations, you config is higher priority than default.
+  # "rb": ruby
+  # "Rakefile": ruby
+  # "*.js": javascript
+  # ".mdx": markdown
 spellcheck:
   words:
     # Please do not add a general English word (eg. apple, python) here.
