--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,11 @@
 name: CI
 on:
   pull_request:
+    branches:
+      - main
   push:
     branches:
       - "*"
-      - "!build-test"
     tags:
       - "*"
 jobs:
