Setup Cargo default-members for fix Makefile script.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,10 @@
 [workspace]
+default-members = [
+  "autocorrect",
+  "autocorrect-derive",
+  "autocorrect-wasm",
+  "autocorrect-cli",
+]
 exclude = [
   "autocorrect-tauri",
 ]
