--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -16,11 +16,11 @@ path = "src/main.rs"
 [dependencies]
 autocorrect = {path = "../autocorrect", version = ">1.0.0"}
 clap = {version = "3", features = ['derive']}
-colored = "2"
 ignore = "0.4"
 lazy_static = "1.4.0"
 log = "0.4"
 num_cpus = "1.13.0"
+owo-colors = "3"
 threadpool = "1.8.1"
 walkdir = "2.3.2"
 
