Improve GitHub Action config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     name: Test
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -22,6 +23,7 @@ jobs:
         run: cargo test
 
   test_node:
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     name: Test for Node.js
     runs-on: ubuntu-latest
     steps:
@@ -36,6 +38,7 @@ jobs:
           make test:node
 
   test_python:
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     name: Test for Python
     runs-on: ubuntu-latest
     steps:
@@ -51,6 +54,7 @@ jobs:
         run: make test:python
 
   test_ruby:
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     name: Test for Ruby
     runs-on: ubuntu-latest
     steps:
@@ -66,6 +70,7 @@ jobs:
         run: make test:ruby
 
   test_java:
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     strategy:
       fail-fast: true
       matrix:
@@ -88,6 +93,7 @@ jobs:
 
   lint:
     name: Lint
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
