--- a/example/package.json
+++ b/example/package.json
@@ -1,24 +1,19 @@
 {
   "scripts": {
-    "start": "webpack serve"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@webpack-cli/serve": "^1.5.2",
-    "autoprefixer": "^10.4.4",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react-swc": "^3.0.0",
     "monaco-editor": "^0.34.1",
-    "monaco-editor-webpack-plugin": "^7.0.1",
     "postcss": "^8.4.12",
-    "postcss-loader": "^6.2.1",
     "sass": "^1.50.0",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.24",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
-    "webpack": "^5.20.0",
-    "webpack-cli": "^4.3.0",
-    "webpack-dev-server": "^3.11.2"
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0",
+    "vite-plugin-wasm": "^3.1.0"
   }
 }
