--- a/autocorrect-website/package.json
+++ b/autocorrect-website/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "release": "./scripts/release.sh"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -15,5 +16,8 @@
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-wasm": "^3.1.0"
+  },
+  "dependencies": {
+    "@huacnlee/autocorrect": "^2.5.4"
   }
 }
