--- a/.github/workflows/release-rb.yml
+++ b/.github/workflows/release-rb.yml
@@ -4,7 +4,7 @@ on:
     tags:
       - "v*"
     branches:
-      - "release-gem"
+      - release-gem
 jobs:
   build:
     name: Build compile gems
@@ -18,12 +18,11 @@ jobs:
           - "x86_64-linux"
     steps:
       - uses: actions/checkout@v3
-
       - uses: oxidize-rb/actions/setup-ruby-and-rust@main
         with:
           ruby-version: "3.1"
-          bundler-cache: false
-          cargo-cache: true
+          bundler-cache: true
+          cargo-cache: "sccache"
           cargo-vendor: true
 
       - name: Touch Rakefile
