--- a/.github/workflows/release-rb.yml
+++ b/.github/workflows/release-rb.yml
@@ -29,13 +29,12 @@ jobs:
         run: |
           touch Rakefile
 
-      - uses: oxidize-rb/cross-gem-action@v6
+      - uses: oxidize-rb/cross-gem-action@v7
         with:
           platform: ${{ matrix.ruby-platform }}
           directory: ./
+          ruby-versions: "3.2, 3.1, 3.0, 2.7" # optional
           setup: cd autocorrect-rb/ && bundle install || gem install rb_sys
-          env: |
-            RUBY_CC_VERSION=3.1.0:3.0.0:2.7.0
 
       - uses: actions/download-artifact@v3
         with:
