--- a/autocorrect-wasm/Cargo.toml
+++ b/autocorrect-wasm/Cargo.toml
@@ -7,7 +7,7 @@ version = "2.5.5"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-autocorrect = {path = "../autocorrect", version = ">=1.9.0"}
+autocorrect = {path = "../autocorrect", version = "^2.0"}
 serde = {version = "1.0.127", features = ["derive"]}
 serde_json = "1.0.66"
 wasm-bindgen = {version = "0.2.83", features = ["serde-serialize"]}
