--- a/.github/workflows/release-crate-gem.yml
+++ b/.github/workflows/release-crate-gem.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/cargo@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+        name: Release Crate
         with:
           command: publish
           args: --manifest-path autocorrect/Cargo.toml --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
@@ -46,7 +48,7 @@ jobs:
         with:
           platform: ${{ matrix.ruby-platform }}
           directory: ./
-          ruby-versions: "3.2, 3.1, 3.0, 2.7" # optional
+          ruby-versions: "3.2, 3.1" # optional
           setup: cd autocorrect-rb/ && bundle install
 
   build_source:
